--- a/Cuaderno/ProyeccionDemanda.ipynb
+++ b/Cuaderno/ProyeccionDemanda.ipynb
@@ -139,9 +139,43 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Clonar el repositorio GitHub\n",
+        "!git clone https://github.com/alvillegasru/Proyeccion_Energia.git"
+      ],
       "metadata": {
-        "id": "Q5dVg1XsJVat"
+        "id": "Q5dVg1XsJVat",
+        "outputId": "aeced5fc-34c0-4a3e-ae4b-f4340560c22c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'Proyeccion_Energia'...\n",
+            "remote: Enumerating objects: 170, done.\u001b[K\n",
+            "remote: Counting objects: 100% (54/54), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (26/26), done.\u001b[K\n",
+            "remote: Total 170 (delta 50), reused 28 (delta 28), pack-reused 116 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (170/170), 21.83 MiB | 17.62 MiB/s, done.\n",
+            "Resolving deltas: 100% (79/79), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Importar base de datos desde drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive',force_remount = True)\n"
+      ],
+      "metadata": {
+        "id": "vnZd0SfZ1wO5"
       },
       "execution_count": null,
       "outputs": []
