--- a/Cuaderno/ProyeccionDemanda.ipynb
+++ b/Cuaderno/ProyeccionDemanda.ipynb
@@ -138,6 +138,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**1. Manipulación y limpieza de datos**"
+      ],
+      "metadata": {
+        "id": "oR6YCHwY2KGy"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Clonar el repositorio GitHub\n",
@@ -145,10 +154,10 @@
       ],
       "metadata": {
         "id": "Q5dVg1XsJVat",
-        "outputId": "aeced5fc-34c0-4a3e-ae4b-f4340560c22c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "aeced5fc-34c0-4a3e-ae4b-f4340560c22c"
       },
       "execution_count": 1,
       "outputs": [
