--- a/Cuaderno/ProyeccionDemanda.ipynb
+++ b/Cuaderno/ProyeccionDemanda.ipynb
@@ -313,11 +313,11 @@
       "cell_type": "markdown",
       "source": [
         "# **PROYECTO CIENCIA DE DATOS**\n",
-        "## ***Evaluación del comportamiento Espacial de la Demanda ante cambios en las variables proyectadas***\n",
+        "## ***Predicción de energía de transformadores de distribución en zona urbana***\n",
         "\n",
         "## **Descripción**\n",
         "\n",
-        "Desarrollar e implementar un modelo generativo capaz de simular y analizar el comportamiento de la proyección espacial de la demanda eléctrica, con el fin de evaluar el impacto de los cambios en las variables clave y predecir escenarios alternatios que faciliten la toma de decisiones estratégicas en el planeamiento de la red\n",
+        "Desarrollar e implementar un modelo generativo capaz de predecir la energía que podría consumir un transformador dependiendo de su ubicación, estrato, clientes, circuito y subestación en la zona urbana de Manizales.\n",
         "\n",
         "### **Integrantes:**\n",
         "* Astrid Vanesa Mina\n",
@@ -334,22 +334,26 @@
       "source": [
         "# **1. Justificación**\n",
         "\n",
-        "El crecimiento y cambio de la demanda eléctrica están fuertemente influenciados por factores espaciales, como el desarrollo urbanístico, la evolución de zonas industriales y residenciales, y el comportamiento demográfico. Un simulador que permita proyectar la demanda espacialmente es esencial para anticiparse a estos patrones de consumo y lograr una planificación precisa y proactiva de la infraestructura de distribución y transmisión.\n",
+        "En la actualidad, la proyección de demanda de energía para los transformadores de distribución es un proceso fundamental para garantizar un suministro eléctrico eficiente y adecuado. Sin embargo, la metodología utilizada por la empresa para calcular estas proyecciones es insuficiente y presenta múltiples limitaciones. El proceso es lento, consume una cantidad significativa de recursos y no tiene en cuenta una serie de variables clave que impactan de manera importante el consumo energético de los transformadores, tales como la ubicación geográfica, el estrato socioeconómico de los clientes, las características de los circuitos, y la interacción con las subestaciones cercanas.\n",
         "\n",
-        "Esto resulta especialmente relevante para el planeamiento de sistemas eléctricos en redes de alta y media tensión, donde la variación espacial de la demanda puede provocar efectos notables en la estabilidad, eficiencia y resiliencia de la red.\n",
-        "\n",
-        "Lo que podría ayudar aminimizar las inversiones no estratégicas y a reducir los costos de operación mediante la ubicación precisa de recursos y el diseño de redes robustas. Esto se traduce en una mejora de la calidad del servicio y una respuesta efectiva a la demanda de los usuarios finales.\n",
+        "La falta de una metodología precisa y eficiente para realizar las proyecciones genera problemas en la capacidad de respuesta ante picos de demanda, desajustes en la infraestructura y, en última instancia, afecta la calidad del servicio eléctrico brindado a los usuarios. Es relevante contar con un modelo predictivo avanzado que pueda integrar todos estos factores de manera efectiva para optimizar la estimación de la demanda energética y reducir costos asociados a sobrecargas o subutilización de los transformadores.\n",
         "\n",
         "\n",
         "# **2. Problemática actual y base de datos:**\n",
         "\n",
-        "En la actualidad, en CHEC se enfrenta una problemática relacionada con el cálculo de la proyección de demanda. Este proceso es lento y consume mucho tiempo, además de no ser completamente efectivo, ya que no se consideran todas las variables relevantes. Como resultado, las proyecciones no reflejan con precisión las necesidades reales.\n",
+        "El proceso de cálculo de las proyecciones de demanda implemetado en CHEC hoy día no contempla todas las variables relevantes. Este sistema de predicción es tradicionalmente lento y laborioso, lo que provoca un desajuste entre la oferta y la demanda real de energía. Las proyecciones erróneas pueden resultar en subdimensionamiento o sobredimensionamiento de los transformadores, afectando tanto la eficiencia operativa como la calidad del servicio.\n",
+        "\n",
+        "Además, las proyecciones no incluyen un análisis completo del comportamiento energético en diferentes estratos sociales, la ubicación de los transformadores, las características específicas de los circuitos y las interacciones con otras subestaciones, factores que inciden considerablemente en el consumo. La empresa también enfrenta una limitación al no poder prever con precisión el impacto de cambios en los patrones de consumo, como aquellos derivados de nuevos desarrollos urbanísticos o fluctuaciones en la demanda local.\n",
         "\n",
         "**Solución Propuesta:**\n",
         "\n",
-        "Para mejorar este proceso, se propone utilizar inteligencia artificial (IA) para realizar el cálculo de la proyección de demanda de manera más eficiente y precisa, esto se logrará mediante el uso de una base de datos consolidada, luego, la integración de estas variables permitirá obtener proyecciones más precisas y dinámicas, optimizando así los tiempos de respuesta y mejorando la planificación de la demanda.\n",
+        "El proyecto consiste en desarrollar e implementar un modelo generativo basado en técnicas de inteligencia artificial y aprendizaje automático, que será capaz de predecir el consumo energético de los transformadores de manera más precisa y eficiente. Este modelo integrará un conjunto de variables que impactan directamente en la demanda, tales como la ubicación geográfica de los transformadores, el estrato socioeconómico de los clientes, las características específicas de los circuitos, y la interacción con las subestaciones cercanas.\n",
         "\n",
-        "Este simulador proporcionará una plataforma capaz de generar proyecciones de demanda en función de variables espaciales, tales como el crecimiento poblacional, el producto interno bruto, la temperatura, estratificación y uso del suelo. Se pretende proyectar 10 años de energía, para ello será necesario contruir una base de datos histórica de mínimo 10 años atras.\n",
+        "La solución propuesta implica el uso de datos históricos sobre consumo energético, junto con un análisis geoespacial de la zona urbana de Manizales, para generar predicciones más precisas y personalizadas.\n",
+        "\n",
+        "Además de mejorar la exactitud de las proyecciones de demanda, este análisis contribuirá significativamente a una mejor planificación de la infraestructura eléctrica. Al integrar diversas variables relevantes, el modelo facilitará la toma de decisiones estratégicas sobre la expansión, el mantenimiento y la distribución de los transformadores y otros equipos críticos, adaptándose a las necesidades reales de la zona.\n",
+        "\n",
+        "Con la implementación de este modelo, la empresa podrá realizar proyecciones más certeras y contar con herramientas más efectivas para el planeamiento a largo plazo, lo que garantizará una infraestructura eléctrica más robusta, eficiente y adecuada para satisfacer las crecientes necesidades energéticas de la comunidad. A su vez, se logrará una mayor fiabilidad en el servicio, contribuyendo al bienestar de los usuarios y al desarrollo sostenible de la ciudad.\n",
         "\n",
         "## **2.1 Bases de datos**\n",
         "\n",
@@ -407,7 +411,7 @@
         },
         "outputId": "9fc0f498-7218-4124-849a-1375e094f088"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,7 +440,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,7 +488,7 @@
       "metadata": {
         "id": "c5IlQy7T4XYL"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -503,7 +507,7 @@
           "height": 206
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,7 +827,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -855,7 +859,7 @@
       "metadata": {
         "id": "yyQlT4YwTWG0"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -874,7 +878,7 @@
           "height": 423
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1287,7 +1291,7 @@
       "metadata": {
         "id": "J6h1bREIo1uV"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1298,7 +1302,7 @@
       "metadata": {
         "id": "42Pq7DF_urmC"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1310,7 +1314,7 @@
       "metadata": {
         "id": "WmM8GtBBvlgT"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1328,7 +1332,7 @@
         "id": "pkecZroIv88b",
         "outputId": "3d49fbaa-5300-40b5-b3a5-520a56f9dd75"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1753,7 +1757,7 @@
       "metadata": {
         "id": "l-ZVJIHi0LUm"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1764,7 +1768,7 @@
       "metadata": {
         "id": "-Wytuav30eNx"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1780,7 +1784,7 @@
         "id": "vztA0_kU01qm",
         "outputId": "7d810a47-13b6-45af-8be8-dae661a385bb"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2213,7 +2217,7 @@
         "id": "HS9TnXdx0vWf",
         "outputId": "a8811d23-9d6f-4b76-8190-7ed60309c7c5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2705,7 +2709,7 @@
         "id": "nd6nJTWv21Z-",
         "outputId": "5b1e2bac-7e1f-41ff-cdcb-a9a5aa026dc2"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2799,7 +2803,7 @@
       "metadata": {
         "id": "Eyiz8pGpfEe_"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2819,7 +2823,7 @@
           "height": 423
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3348,7 +3352,7 @@
           ]
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3374,7 +3378,7 @@
       "metadata": {
         "id": "PgJFzOmMiZ83"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3385,7 +3389,7 @@
       "metadata": {
         "id": "e40VXGdrk36O"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3400,7 +3404,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3438,7 +3442,7 @@
         },
         "collapsed": true
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -3492,7 +3496,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3560,7 +3564,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3643,7 +3647,7 @@
           "height": 100
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4076,7 +4080,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4108,7 +4112,7 @@
           "height": 442
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
