--- a/Cuaderno/ProyeccionDemanda.ipynb
+++ b/Cuaderno/ProyeccionDemanda.ipynb
@@ -613,7 +613,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Manipulación y filtrado de datos**"
+        "**Manipulación y filtrado de datos**\n",
+        "\n",
+        "En esta etapa, se carga la información desde un archivo en formato .parquet, que contiene el histórico mensual de las mediciones de energía para el período comprendido entre enero de 2020 y septiembre de 2024. Este archivo abarca datos de todos los transformadores de CHEC, incluyendo la relación entre circuitos y transformadores.\n",
+        "\n",
+        "Además, se agrega una columna denominada \"SUB\" para identificar la subestación correspondiente, y se realiza un filtrado para limitar los datos exclusivamente a las subestaciones ubicadas en Manizales."
       ],
       "metadata": {
         "id": "oR6YCHwY2KGy"
@@ -649,7 +653,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Merged** para la unión de la información"
+        "**Merged** para la unión de la información\n",
+        "\n",
+        "En este punto, se carga la información histórica de clientes por transformador, la cual incluye datos relacionados con el transformador, el año, el mes y el número de clientes asociados a cada transformador durante los respectivos periodos.\n",
+        "\n",
+        "Posteriormente, se realiza la integración de esta información con las coordenadas geográficas de cada transformador, así como con el histórico de mediciones de energía mencionado previamente. Esto permite consolidar una base de datos completa que incluye el tipo de cliente asociado a cada transformador."
       ],
       "metadata": {
         "id": "Tkax7Rsbw_YN"
@@ -697,6 +705,28 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Label Encoder**\n",
+        "\n",
+        "Se utiliza esta función para transformar los datos disponibles, comenzando con la identificación y separación de las columnas categóricas y numéricas.\n",
+        "\n",
+        "* Para las columnas numéricas, los valores faltantes se reemplazan con tres veces el valor máximo de cada columna.\n",
+        "* Para las columnas categóricas, los valores faltantes se completan con el texto \"NO APLICA\".\n",
+        "\n",
+        "Posteriormente, se aplica el Label Encoder a las columnas categóricas, asignando valores numéricos únicos a cada categoría. Esto facilita el procesamiento y análisis posterior de los datos al convertir las categorías en un formato apto para modelos de aprendizaje automático.\n",
+        "Esta transformación asegura la consistencia y manejabilidad de los datos para las siguientes etapas del análisis o modelado.\n",
+        "\n",
+        "**Partición de los datos**\n",
+        "\n",
+        "Se realiza la división de los datos para separar los conjuntos necesarios: uno para entrenar el modelo, otro para validarlo, y finalmente un conjunto de prueba para evaluar su desempeño final. Previamente, las características y la variable objetivo se preparan, identificando las categorías de la variable objetivo mediante percentiles para asegurar una distribución equilibrada en las divisiones. Además, los datos se escalan y categorizan cuando es necesario, utilizando técnicas como MinMaxScaler y estratificación, lo que garantiza una correcta representación de las proporciones de las categorías en los fragmentos de entrenamiento, validación y prueba.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Q5OCpTOmpqzt"
+      }
     },
     {
       "cell_type": "code",
@@ -778,7 +808,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**En este punto se hace el entrenamiento considerando 50 epoch y 10 trials para identificar los hiperparámetros del modelo.**"
+        " # **4. Hoja de ruta y algoritmo empleado:**\n",
+        "\n",
+        "\n",
+        "El modelo seleccionado es **TableNet** que corresponde a un método de aprendizaje profundo diseñado originalmente para identificar y extraer tablas de documentos como PDF o imágenes escaneadas. Sin embargo, este modelo también puede aplicarse directamente sobre tablas definidas, lo que lo hace versátil para diversas tareas, incluyendo la regresión.\n",
+        "\n",
+        "Cuando se utiliza para regresión, TableNet ajusta su arquitectura para predecir valores continuos, aprovechando su capacidad para analizar la estructura visual y el contenido numérico de las tablas. Esto lo convierte en una herramienta robusta para problemas que requieren la combinación de características espaciales y semánticas.\n",
+        "\n",
+        "Características clave del modelo:\n",
+        "* Especialización tabular: Diseñado para comprender estructuras tabulares, lo que asegura un análisis preciso incluso en tablas complejas.\n",
+        "* Adaptabilidad: Su arquitectura permite abordar tareas de regresión con ligeras modificaciones, manteniendo su rendimiento y precisión.\n",
+        "* Capacidad de aprendizaje visual y estructural: Combina redes convolucionales para identificar patrones tanto en la disposición como en el contenido de las tablas.\n",
+        "\n",
+        "**Configuración del modelo para regresión:**\n",
+        "\n",
+        "Para implementar TableNet en una tarea de regresión, se consideran los siguientes ajustes:\n",
+        "* Función de pérdida: Se utiliza una función adecuada para regresión, que es el error absoluto medio (MAE).\n",
+        "* Hiperparámetros clave:\n",
+        "   - Tasa de aprendizaje: Controla la velocidad de ajuste de los pesos del modelo.\n",
+        "   - Tamaño del lote (batch size): Define cuántas muestras se procesan simultáneamente durante el entrenamiento.\n",
+        "   - Número de filtros en las capas convolucionales: Ajusta la capacidad del modelo para aprender características relevantes.\n",
+        "   - Dropout: Se emplea para prevenir el sobreajuste.\n",
+        "Número de épocas: Determina la cantidad de iteraciones completas sobre el conjunto de entrenamiento."
+      ],
+      "metadata": {
+        "id": "mH2TpIBIsjHo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Optimización de hiperparámetros para el modelo TabNetRegressor**\n",
+        "\n",
+        "\n",
+        "En el proceso de optimización de hiperparámetros, se configuraron diferentes optimizadores como Adam, SGD y RMSprop, seleccionados dinámicamente según los parámetros sugeridos, ajustando valores como la tasa de aprendizaje, peso de decaimiento y momento. El modelo TabNetRegressor se entrenó utilizando los conjuntos de datos de entrenamiento y validación, evaluando su desempeño con la métrica MAE (Mean Absolute Error) y una función personalizada para evaluar la pérdida, implementando un mecanismo de paciencia que detiene el entrenamiento si no hay mejoras en 40 épocas consecutivas. Al finalizar cada prueba, la métrica MAE se utilizó como criterio para determinar la calidad del modelo, optimizando este valor a lo largo del proceso . Para ello, se creó un estudio con Optuna, empleando el muestreador TPESampler, que realiza búsquedas eficientes en el espacio de hiperparámetros definidos, explorando distintas combinaciones a lo largo de 10 iteraciones. Finalmente, los mejores hiperparámetros se obtuvieron con base en el MAE mínimo alcanzado, consolidando los resultados para determinar la configuración más eficiente ."
       ],
       "metadata": {
         "id": "7I5KIRZ4yIr7"
@@ -890,15 +953,6 @@
       ],
       "metadata": {
         "id": "ebArDhrMyxS_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "VP9a4qdNy1BM"
       },
       "execution_count": null,
       "outputs": []
@@ -4669,22 +4723,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **4. Análisis exploratorio básico:**\n",
         "\n",
-        "Pendiente\n",
-        "\n",
-        "# **5. Hoja de ruta y posibles algoritmos a emplear:**\n",
-        "\n",
-        "\n",
-        "Hasta el momento se ha identificado que el proyecto puede implementarse haciendo uso de:\n",
-        "\n",
-        "\n",
-        "*   Modelo múltiple tipo MISO (Multiple Input Single Output) en donde la variable de salida sería la proyección de la energía mensual y las entradas todas las mencionadas en el punto de bases de datos. Se planea hacer uso del modelo de regresión lineal junto con métodos de regularización por L1 (LASSO) o L2 (RIDGE) o L2,1 (ELASTIC NET). En caso de que el modelo no presente una relación lineal se optaría por utilizar herramientas de linealización.\n",
-        "\n",
-        "*   Redes neuronales\n",
-        "\n",
-        "\n",
-        "# **6. Conclusiones y trabajo futuro:**\n",
+        "# **5. Conclusiones y trabajo futuro:**\n",
         "\n",
         "Durante la exploración de la información hemos encontrado que obtener la proyección espacial de potencia implica tener la curva de caracterización actualizada por cliente y la medición horaria por transformador de distribición, información que a la fecha no disponemos. Por lo tanto, se define que se realizará únicamente la proyección espacial de la energía. Dejando como trabajo futuro el desarrollo para la proyección espacial de la potencia."
       ],
