--- a/Cuaderno/ProyeccionDemanda.ipynb
+++ b/Cuaderno/ProyeccionDemanda.ipynb
@@ -968,7 +968,16 @@
         "\n",
         "# **5. Conclusiones y trabajo futuro:**\n",
         "\n",
-        "Durante la exploración de la información hemos encontrado que obtener la proyección espacial de potencia implica tener la curva de caracterización actualizada por cliente y la medición horaria por transformador de distribición, información que a la fecha no disponemos. Por lo tanto, se define que se realizará únicamente la proyección espacial de la energía. Dejando como trabajo futuro el desarrollo para la proyección espacial de la potencia."
+        "* Durante la exploración de la información hemos encontrado que obtener la proyección espacial de potencia implica tener la curva de caracterización actualizada por cliente y la medición horaria por transformador de distribición, información que a la fecha no disponemos. Por lo tanto, se define que se realizará únicamente la proyección espacial de la energía. Dejando como trabajo futuro el desarrollo para la proyección espacial de la potencia.\n",
+        "\n",
+        "* Es fundamental iterar sobre la optimización de la búsqueda de hiperparámetros para identificar las características que permitan desarrollar un modelo TableNet con un rendimiento óptimo, basado en un proceso de entrenamiento adecuado.\n",
+        "\n",
+        "* Una vez asegurado un proceso de optimización efectivo (realizando pruebas con diferentes cantidades de épocas, tanto extensas como reducidas), se observa una mejora significativa en el valor del coeficiente R², alcanzando un nivel de 0.95. Este resultado indica que el modelo explica el 95% de la variabilidad en los datos, lo que refleja un desempeño sólido y consistente.\n",
+        "\n",
+        "*  El valor obtenido (0.95) en R2 indica que el modelo TableNet es altamente adecuado para el problema en cuestión, ya que logra explicar el 95% de la variabilidad en los datos. Esto sugiere que el modelo tiene un excelente desempeño en términos de precisión y capacidad predictiva dentro del contexto de los datos evaluados.\n",
+        "\n",
+        "* El modelo combina múltiples ventajas que lo hacen una solución altamente efectiva para el manejo de datos tabulares. Destaca por su capacidad de proporcionar interpretabilidad, al ofrecer una evaluación intuitiva de la importancia de las características. Su integración del poder de las redes neuronales y los árboles de decisión asegura un manejo eficiente de datos tabulares, mientras que su arquitectura de atención permite un entrenamiento rápido y enfocado en las características más relevantes. Además, su desempeño sólido sin necesidad de preprocesamiento complejo, como la normalización o el escalado de variables, lo convierte en una herramienta práctica y versátil para una amplia variedad de aplicaciones.\n",
+        "\n"
       ],
       "metadata": {
         "id": "uefmHDUV7_Il"
